[gd_scene load_steps=12 format=3 uid="uid://bnalqvda0gf0d"]

[ext_resource type="Script" uid="uid://d23w7tfmachfy" path="res://scenes/timer.gd" id="1_mx8sn"]
[ext_resource type="Texture2D" uid="uid://brsuovn5y0067" path="res://icon.svg" id="1_w8frs"]
[ext_resource type="PackedScene" uid="uid://cchtghipb7a7d" path="res://scenes/player.tscn" id="2_mx8sn"]
[ext_resource type="Texture2D" uid="uid://buf52tuf2kh86" path="res://manface/Man-Face-Roblox-PNG-Picture.png" id="3_klq6b"]
[ext_resource type="Texture2D" uid="uid://b4gdajwb5og5m" path="res://manface/maxresdefault.jpg" id="4_b121j"]
[ext_resource type="Texture2D" uid="uid://f3kskpkox8d5" path="res://manface/Png.png" id="5_8c41q"]
[ext_resource type="Texture2D" uid="uid://cs5y6ue4p2xkt" path="res://manface/Png (1).png" id="6_olg7q"]
[ext_resource type="PackedScene" uid="uid://byx4cbmqn3b47" path="res://scenes/ui.tscn" id="8_b121j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t1rx8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_klq6b")
}, {
"duration": 1.0,
"texture": ExtResource("4_b121j")
}, {
"duration": 1.0,
"texture": ExtResource("5_8c41q")
}, {
"duration": 1.0,
"texture": ExtResource("6_olg7q")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8frs"]
size = Vector2(50, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx8sn"]
size = Vector2(1152, 50)

[node name="Level" type="Node2D"]
script = ExtResource("1_mx8sn")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(579, 327)
scale = Vector2(9.44141, 5.53125)
texture = ExtResource("1_w8frs")
metadata/_edit_lock_ = true

[node name="Stars" type="Node2D" parent="BG"]
position = Vector2(-61.3256, -59.1186)
scale = Vector2(0.105916, 0.180791)

[node name="StarAnimated" type="AnimatedSprite2D" parent="BG/Stars"]
position = Vector2(-196, 199)
scale = Vector2(0.0933408, 0.180754)
sprite_frames = SubResource("SpriteFrames_t1rx8")
frame_progress = 0.0899324

[node name="Player" parent="." instance=ExtResource("2_mx8sn")]

[node name="Borders" type="Node2D" parent="."]
position = Vector2(117, 247)
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(-142, 77)
shape = SubResource("RectangleShape2D_w8frs")

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
position = Vector2(1060, 77)
shape = SubResource("RectangleShape2D_w8frs")

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
position = Vector2(459, -272)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
position = Vector2(459, 426)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Meteors" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Lasers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Ui" parent="." instance=ExtResource("8_b121j")]

[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
